--- a/style.css
+++ b/style.css
@@ -134,7 +134,6 @@ background-clip: text;
         font-size: 1.6rem;
     }
 
-  
     .navbar__toggle .bar {
         width: 25px;
         height: 3px;
@@ -159,6 +158,34 @@ background-clip: text;
     .navbar__btn{
         padding-bottom: 2rem;
     }
+
+    .navbar__btn a{
+        position: relative;
+        z-index: 2;
+        color: #fff;
+        text-decoration: none;
+    }
+    
+    .navbar__btn:after{
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 100%;
+        background: #ff6a00;
+        transition: all 0.35s;
+        border-radius: 4px;
+    }
+    
+    .navbar__btn:hover{
+        color: #fff;
+    }
+    
+    .navbar__btn:hover:after{
+        width: 100%;
+    }
+
 
     .button{
         display: flex;
@@ -486,7 +513,7 @@ margin-bottom: 32px;
     -webkit-text-fill-color: transparent; 
     -mozkit-text-fill-color: transparent; 
     margin-bottom: 5rem;
-    font-size: 2.5rem;
+    font-size: 4rem;
 }
 
 .services-wrapper{
@@ -577,7 +604,11 @@ background: linear-gradient(to right, #2657eb, #de6161); /* W3C, IE 10+/ Edge, F
         align-items: center;
         cursor: pointer;
         text-decoration: none;
-        font-size: 2rem;}
+        font-size: 2rem;
+        font-family: 'lobster', cursive;
+    
+    }
+        
 
     .footer-links{
         width: 100%;
@@ -624,8 +655,18 @@ background: linear-gradient(to right, #2657eb, #de6161); /* W3C, IE 10+/ Edge, F
         font-size: 24px;
     }
 
-    .social-icon-link::after{
+    .social-icon-link:after{
         color: #fff;
+    }
+
+    .social-icon-link a{
+        color:#fff;
+    }
+
+    .fab fa-facebook a:hover{
+            color:#ff0844;
+            transition: all 0.3s ease;
+          
     }
 
     .social-media{
@@ -635,13 +676,28 @@ background: linear-gradient(to right, #2657eb, #de6161); /* W3C, IE 10+/ Edge, F
     }
 
     .social-media-wrap{
+        background: #780206;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #061161, #780206);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #061161, #780206); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background-size: 100%;
+        background-clip: text;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            text-decoration: none;
+            font-size: 2rem;
+            padding-left: 25px;
+            
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 90%;
         max-width: 1000px;
         margin: 40px auto 0 auto;
-        
+       
     }
 
     .social-icons {
